scene: Fix alpha channel of offscreen cursor texture

When running with 10bpc, the alpha channel has only 2 bits for it, which
is too low for the cursor.

BUG: 479637


(cherry picked from commit 68f1570d452a775d617a5141d94d9a5e95e2e038)